tests/paczka1/fuzzy1/13197540.err
Error in line 4: GsGC A817 31,7
Error in line 6: FkwSqws A817 3,2
Error in line 11: S764 A973 22,7
Error in line 17: GsGC A817 57,9
Error in line 9: FkwSqws S987 29,0
Error in line 27: GsGC S764 64,0
Error in line 26: cPLPOz2mi S764 46,1
Error in line 35: 31Ye72y S987 282,9
